bug 818927 - convert drop location to logical pixels for Windows. r=jimm